--- a/todo-ui/package.json
+++ b/todo-ui/package.json
@@ -24,6 +24,7 @@
     "yup": "^1.4.0"
   },
   "scripts": {
+     "postinstall": "chmod +x ./node_modules/.bin/react-scripts",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
